[package]
name = "converter"
version = "0.1.0"
authors = ["bingryan <bingryan@outlook.com>"]
edition = "2018"
license = "Apache-2.0"
description = "explorer converter"
readme = "README.md"
repository = "https://github.com/bingryan/explorer-converter"
homepage = "https://github.com/bingryan/explorer-converter"
keywords = ["converter", "substrate", "explorer"]
exclude = [
    "docs/*",
]

[[bin]]
path = "src/main.rs"
name = "explorer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
celery = { git = "https://github.com/rusty-celery/rusty-celery.git" }
clap = "2.33.3"

tokio = "1.5.0"
dotenv = "0.15.0"
# serde
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
serde_derive = "1.0.125"

config = "0.11"

# Filter
codec = { package = "parity-scale-codec", version = "2.1.1", default-features = false, features = ["derive"] }



# error handling
anyhow = "1.0.40"

# log
env_logger = "0.8.3"
llog = { package = "log", version = "0.4.14", default-features = false }
fast_log = "1.3.23"
yansi = "0.5"

# db
meilisearch-sdk = "0.8.0"
num_cpus = "1.13.0"

# https://github.com/jaemk/cached
cached = "0.23.0"

substrate-subxt = { git = "https://github.com/paritytech/substrate-subxt.git", default-features = false, features = ["client"], tag = "v0.15.0" }


